--- a/views/events/find.hbs
+++ b/views/events/find.hbs
@@ -1,21 +1,22 @@
 <script>let eventId = null</script> {{> navbar user}}
 <h3>Find Events</h3>
 
-<a href="/events/new">Create own event</a>
 <div class="search-container">
     <div class="filter-container">
-        <form action="/tandems/find" method="POST" id="form-container">
+        <form action="/events/find" method="POST" id="form-container">
             <label for="language">Language</label>
-            <input type="text" name="language" placeholder="Language you want to learn" value="">
+            <input type="text" name="language" placeholder="Main lagnuage of the event" value="">
             <label for="country">Country</label>
             <input type="text" name="country" placeholder="Country" value="">
             <label for="city">City:</label>
             <input type="text" name="city" placeholder="City" value="">
-            <label for="age">Age:</label>
-            <input type="number" name="ageStart" placeholder="Min. age" value="18" min="18" maxlength="2">
-            <input type="number" name="ageEnd" placeholder="Max. age">
+            <!-- <label for="minDate">From:</label>
+            <input type="date" name="minDate" placeholder="Min. age">
+            <label for="axDate">To:</label>
+            <input type="date" name="maxDate" placeholder="Max. age">-->
             <input type="submit" value="Find Events">
         </form>
+        <a href="/events/new">Create own event</a>
     </div>
     <div class="results-container">
         <ul>
