--- a/views/partials/tandem-tile.hbs
+++ b/views/partials/tandem-tile.hbs
@@ -7,9 +7,8 @@
   <div class="tile-content">
     <h3>{{ this.name}}</h3>
     <p>{{ this.description }}</p>
-    <p>{{ this.country }}, {{this.city}}</p>
+    <p>{{ this.location.country }}, {{this.location.city}}</p>
 
     <a href="/tandems/add/{{ this._id}}">Add</a>
   </div>
-
 </div>
