textarea value fix

--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -16,7 +16,7 @@
             <label>Age:</label>
             <input type="number" name="age" placeholder="Age" value="{{ user.age}}" required>
             <label>About me:</label>
-            <textarea rows="4" type="text" name="description" placeholder="Something about me.." value="{{ user.description}}"></textarea>
+            <textarea rows="4" type="text" name="description" placeholder="Something about me..">{{ user.description}}</textarea>
         </div>
         <h3>Profile Picture</h3>
         <div class="form-group">
