--- a/views/events/edit.hbs
+++ b/views/events/edit.hbs
@@ -2,6 +2,7 @@
 <script> const data = {{{ dataString }}}</script>
 <script src='/javascripts/data.js'></script>
 <script src='/javascripts/event.js'></script>
+<script src='/javascripts/language-init.js'></script>
 
 <h3>Edit event</h3>
 <div class="content-wrapper">
