--- a/views/events/new.hbs
+++ b/views/events/new.hbs
@@ -2,6 +2,7 @@
 <script>const data = {{{ dataString }}}</script>
 <script src='/javascripts/data.js'></script>
 <script src='/javascripts/event.js'></script>
+<script src='/javascripts/language-init.js'></script>
 
 <div class="content-wrapper">
     <h2>Create new Event</h2>
