--- a/views/partials/tandem-tile.hbs
+++ b/views/partials/tandem-tile.hbs
@@ -1,7 +1,6 @@
-<script>tandemId = `{{this._id}}`</script>
 <script src='/javascripts/tandem-search.js'></script>
 
-<div class="tile-search">
+<div class="tile-interactive">
   <div class="tile-image"> <img src={{this.picture}} alt="profile picture">
   </div>
   <div class="tile-content">
