--- a/views/profile/show.hbs
+++ b/views/profile/show.hbs
@@ -1,6 +1,7 @@
 <script>const user = null</script>
 <script src='/javascripts/data.js'></script>
-<script src='/javascripts/user-info.js'></script> {{> navbar user}}
+<script src='/javascripts/user-info.js'></script>
+<script src='/javascripts/language-init.js'></script> {{> navbar user}}
 
 <div class="content-wrapper">
   <div id="content-wrapper-profile">
