--- a/public/stylesheets/search.scss
+++ b/public/stylesheets/search.scss
@@ -4,21 +4,21 @@ $filter-width: 320px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
   @media #{$screen-middle-large} {
     flex-direction: row;
     justify-content: flex-start;
   }
   .filter-container {
     height: 380px;
-    width: $filter-width;
-    padding: 0 0 0 8px;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
-    @media #{$screen-middle-large} {
-      height: calc(100vh - #{$navbar-height} - 160px);
 
+    @media #{$screen-middle-large} {
+      width: $filter-width;
+      height: calc(100vh - #{$navbar-height} - 160px);
+      padding: 0 0 0 8px;
       border-right: 1px solid black;
     }
     .age {
@@ -26,7 +26,7 @@ $filter-width: 320px;
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
-      margin: 14px 0;
+      padding: 14px 0;
     }
     #min-age,
     #max-age {
@@ -35,11 +35,14 @@ $filter-width: 320px;
   }
 
   .results-container {
-    padding: 0 0 0 8px;
+    padding: 0 8px 0 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
-.tile-search {
+.tile-interactive {
   border: 1px solid #e6e6e6;
   height: $tile-picture-l;
   margin: 2px 0;
@@ -51,9 +54,8 @@ $filter-width: 320px;
   }
   @media #{$screen-middle-large} {
     padding: 0 4px;
-    width: calc(
-      100vw - #{$filter-width} - 8px - 8px
-    ); //tile width: full width - filter space - container padding -tile padding
+    //tile width: full width - filter space - container padding -tile padding
+    width: calc(100vw - #{$filter-width} - 8px - 8px);
   }
 
   .tile-image {
