language now defined by name, not language code

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,6 +1,8 @@
 <script>const user = null</script>
 <script src='/javascripts/data.js'></script>
 <script src='/javascripts/user-info.js'></script>
+<script src='/javascripts/util/language-init.js'></script>
+<script src='/javascripts/util/country-init.js'></script>
 
 <h2>Signup</h2>
 <div class="content-wrapper">
