--- a/views/events/show.hbs
+++ b/views/events/show.hbs
@@ -1,11 +1,37 @@
-<h3>{{ event.title}}</h3>
-{{ event.description}}
-<br> {{ event.language}}
-<br> Date: {{event.date}}
-<br> Attendes: {{event.counter}}
-<br> {{#if event.userAttending}}
-<br><br>
-<a href="/events/unattend/{{event._id}}">Unattend Event</a><br> {{else}}
-<a href="/events/attend/{{event._id}}">Attend Event</a><br> {{/if}}
-<br>
-<a href="/events">Back to my events</a>
+{{> navbar data}}
+<div class="content-wrapper event">
+  <div class="flex-column">
+    <a href="/events">Back to my events</a>
+    <div class="flex-row">
+      <div class="tile-image">
+        <img src="{{event.picture}}" alt="event picture">
+      </div>
+      <div class="description">
+        <h2>{{ event.title}}</h2>
+        <p>{{event.description}}</p>
+      </div>
+    </div>
+    <div class="chat-wrapper">
+    </div>
+  </div>
+  <div class="flex-column">
+    <div class="map-wrapper">
+
+    </div>
+    <div class="info-wrapper">
+      <p>Location:</p>
+      <p>{{event.location.city}}, {{event.location.country}}{{#if event.location.street}},</br>{{event.location.street}}</p>{{/if}}
+      <p>Language:</p>
+      <p>{{event.language}}</p>
+      <p>Date:</p>
+      <p>{{event.date}}</p>
+      <p>Attendees:</p>
+      <p>{{event.counter}} </p> {{#if event.userAttending}}
+      <a href="/events/unattend/{{event._id}}">Unattend Event</a><br> {{else}}
+      <a href="/events/attend/{{event._id}}">Attend Event</a><br> {{/if}} {{#if event.own}}<a href="/events/edit/{{event._id}}">Edit
+        Event
+      </a>
+      <br> {{/if}}
+    </div>
+  </div>
+</div>
