--- a/views/tandems/index.hbs
+++ b/views/tandems/index.hbs
@@ -18,5 +18,7 @@
         </ul>
     </div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
 <script src="/javascripts/chat.js"></script>
