gorup chat working

--- a/views/events/show.hbs
+++ b/views/events/show.hbs
@@ -17,6 +17,7 @@
         <input id="m" autocomplete="off" /><button>Send</button>
       </form>
       <input type="hidden" id="sender" value="{{user._id}}">
+      <input type="hidden" id="name" value="{{user.name}}">
       <input type="hidden" id="receiver" value="{{event._id}}">
     </div>
   </div>
