--- a/views/tandems/index.hbs
+++ b/views/tandems/index.hbs
@@ -1,24 +1,29 @@
 {{> navbar user}}
-<h3>My Tandems</h3>
-<div class="vert-container">
-    <div class="filter-container">
-        {{#each tandems}}
-        <li><a href="/tandems/{{this._id}}">{{this.name}}</a></li> {{/each }}
+<h2>My Tandems</h2>
+<div class="flex-row">
+    <div class="flex-column tandem-list">
+        <ul>
+            {{#each tandems}}
+            <li><a href="/tandems/{{this._id}}">{{this.name}}</a></li>
+            {{/each }}
+        </ul>
     </div>
-    <div class="results-container">
-        <ul id="messages"></ul>
-        <form action="">
+    <div class="flex-column messages">
+        <ul id="messages">
+
+        </ul>
+        <form action="" id="user-input">
+            <button>Send</button>
             <div id="typing" style="color:white"></div>
-            <input id="m" autocomplete="off" /><button>Send</button>
+            <input id="m" autocomplete="off" />
         </form>
         <input type="hidden" id="sender" value="{{user._id}}">
         <input type="hidden" id="receiver" value="{{current._id}}">
         <ul>
-
         </ul>
     </div>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
 <script src="/javascripts/chat.js"></script>
