updated chat window and msg layout, as well as background colour for all pages

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,6 +1,6 @@
 <h2>Login</h2>
 
-<div class="content-wrapper">
+<div class="flex-column-center">
   <form action="/login" method="POST" id="form-container">
 
     <div class="form-group">
