--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -5,7 +5,7 @@
 <script src='/javascripts/util/country-init.js'></script>
 
 <h2>Signup</h2>
-<div class="content-wrapper">
+<div class="flex-column-center">
   <form action="/signup" method="POST" id="form-container" encType="multipart/form-data">
     <div class="form-group">
 
