--- a/views/events/edit.hbs
+++ b/views/events/edit.hbs
@@ -6,7 +6,7 @@
 <script src='/javascripts/util/country-init.js'></script>
 
 <h3>Edit event</h3>
-<div class="content-wrapper">
+<div class="flex-column-center">
     <form method="POST" action="/events/edit/{{event._id}}" encType="multipart/form-data">
         <h3>Basic Info</h3>
         <div class="form-group">
