--- a/views/events/index.hbs
+++ b/views/events/index.hbs
@@ -4,7 +4,7 @@
 <h3>
     My events
 </h3>
-<div class="content-wrapper">
+<div class="flex-column-center">
     <ul>
         {{#each events}}
         <div class="tile-interactive event" id="{{this.id}}">
