--- a/views/events/show.hbs
+++ b/views/events/show.hbs
@@ -1,5 +1,5 @@
 {{> navbar data}}
-<div class="content-wrapper event">
+<div class="flex-column-center event">
   <div class="flex-column">
     <a href="/events">Back to my events</a>
     <div class="flex-row">
