--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -6,7 +6,7 @@
 <script src='/javascripts/util/country-init.js'></script>
 
 <h3>Edit Profile</h3>
-<div class="content-wrapper">
+<div class="flex-column-center">
     <form method="POST" action="/profile/edit" encType="multipart/form-data">
         <div class="form-group">
 
