--- a/views/profile/show.hbs
+++ b/views/profile/show.hbs
@@ -4,7 +4,7 @@
 <script src='/javascripts/util/language-init.js'></script> {{> navbar user}}
 <script src='/javascripts/util/country-init.js'></script>
 
-<div class="content-wrapper">
+<div class="flex-column-center">
   <div id="content-wrapper-profile">
     <div class="column">
       <div id="profile-pic-large">
