--- a/public/stylesheets/dashboard.scss
+++ b/public/stylesheets/dashboard.scss
@@ -8,11 +8,9 @@
   }
 }
 
-.dashboard-content-wrapper {
+.dashboard-wrapper {
   width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
   @media #{$screen-middle} {
     align-items: flex-end;
   }
