--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -140,18 +140,15 @@ nav .nav-img img {
   height: 100vh;
 }
 
-.dashboard-content-wrapper {
+.dashboard-wrapper {
   width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 @media (min-width : 480px) {
-  .dashboard-content-wrapper {
+  .dashboard-wrapper {
     align-items: flex-end;
   }
 }
-.dashboard-content-wrapper .dashboard-group {
+.dashboard-wrapper .dashboard-group {
   width: 340px;
   margin: 30px 0 40px 0;
   padding: 4px;
@@ -159,20 +156,20 @@ nav .nav-img img {
   border-radius: 4px;
 }
 @media (min-width : 480px) {
-  .dashboard-content-wrapper .dashboard-group {
+  .dashboard-wrapper .dashboard-group {
     margin-right: 60px;
   }
 }
 @media (min-width : 1024px) {
-  .dashboard-content-wrapper .dashboard-group {
+  .dashboard-wrapper .dashboard-group {
     margin-right: 100px;
   }
 }
-.dashboard-content-wrapper .dashboard-group h3 {
+.dashboard-wrapper .dashboard-group h3 {
   font-size: 1.8rem;
 }
-.dashboard-content-wrapper .dashboard-group a,
-.dashboard-content-wrapper .dashboard-group p {
+.dashboard-wrapper .dashboard-group a,
+.dashboard-wrapper .dashboard-group p {
   font-size: 1.1rem;
 }
 
@@ -370,11 +367,27 @@ nav .nav-img img {
 }
 .tandem-list li {
   width: 100%;
-  height: 30px;
+  height: 50px;
   padding: 0 0 0 5px;
   border-right: 1px solid lightgray;
   display: flex;
   align-items: center;
+}
+.tandem-list li .tile-image {
+  height: 50px;
+  width: 50px;
+  margin: 4px;
+  border: 1px solid #e6e6e6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.tandem-list li .tile-image img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.tandem-list .current {
+  background-color: red;
 }
 
 #messages {
@@ -382,6 +395,21 @@ nav .nav-img img {
   height: calc(100vh - 44px - 120px);
   margin: 0 8px;
 }
+#messages .message-container {
+  margin: 5px 0;
+}
+#messages .message-container .inline-message {
+  padding: 8px;
+  border-radius: 14px;
+  display: inline-block;
+}
+#messages .message-container .other {
+  background-color: #20a2ff;
+}
+#messages .message-container .self {
+  background-color: white;
+}
+
 #user-input {
   width: calc(100vw - 200px - 38px);
   display: flex;
@@ -407,6 +435,7 @@ nav .nav-img img {
 body {
   font-size: 14px;
   font-family: "Telex", sans-serif;
+  background-color: #f6f6f8;
 }
 
 a {
@@ -438,9 +467,6 @@ form .form-group label {
 }
 
 .content-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin: 0 0 20px 0;
 }
 
@@ -452,6 +478,12 @@ form .form-group label {
 .flex-column {
   display: flex;
   flex-direction: column;
+}
+
+.flex-column-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .success-btn {
