--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,6 +1,8 @@
 $main-color-a: #5533ff;
 $main-color-b: #20a2ff;
 $main-color-b-hover: #258cd6;
+
+$background-color-a: #f6f6f8;
 $main-font: "Telex", sans-serif;
 $screen-middle: "(min-width : 480px)";
 $screen-middle-large: "(min-width : 660px)";
@@ -11,7 +13,7 @@ $navbar-height: 44px;
 $tile-picture-xl: 180px;
 $tile-picture-l: 120px;
 $tile-picture-s: 80px;
-$tile-picture-xs: 60px;
+$tile-picture-xs: 50px;
 $filter-width: 320px;
 
 @import "./navigation";
@@ -31,6 +33,7 @@ $filter-width: 320px;
 body {
   font-size: 14px;
   font-family: $main-font;
+  background-color: $background-color-a;
 }
 
 a {
@@ -65,9 +68,6 @@ form {
 }
 
 .content-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin: 0 0 20px 0;
 }
 
@@ -79,6 +79,12 @@ form {
 .flex-column {
   display: flex;
   flex-direction: column;
+}
+
+.flex-column-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .success-btn {
