--- a/public/stylesheets/tandem.scss
+++ b/public/stylesheets/tandem.scss
@@ -4,11 +4,27 @@
   font-size: 1.2rem;
   li {
     width: 100%;
-    height: 30px;
+    height: $tile-picture-xs;
     padding: 0 0 0 5px;
     border-right: 1px solid lightgray;
     display: flex;
     align-items: center;
+    .tile-image {
+      height: $tile-picture-xs;
+      width: $tile-picture-xs;
+      margin: 4px;
+      border: 1px solid #e6e6e6;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        max-width: 100%;
+        max-height: 100%;
+      }
+    }
+  }
+  .current {
+    background-color: red;
   }
 }
 
@@ -16,7 +32,19 @@
   width: calc(100vw - 200px - 38px); //full width - tandem list - padding;
   height: calc(100vh - #{$navbar-height} - 120px);
   margin: 0 8px;
-  li {
+  .message-container {
+    margin: 5px 0;
+    .inline-message {
+      padding: 8px;
+      border-radius: 14px;
+      display: inline-block;
+    }
+    .other {
+      background-color: $main-color-b;
+    }
+    .self {
+      background-color: white;
+    }
   }
 }
 
