--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -5,7 +5,7 @@
 </div>
 
 
-<div class="dashboard-content-wrapper">
+<div class="flex-column-center dashboard-wrapper">
 
     <div class="dashboard-group">
         <h3>My Tandems</h3>
@@ -24,7 +24,7 @@
             {{#each events}} {{> event_tile_small this}} {{/each}}
         </ul>
         {{else}}
-        <p>You are not subscribed to any upcoming events. <a href=" /events/find ">Find an event here</a></p>
+        <p>You are not subscribed to any upcoming events. <a href=" /events/find">Find an event here</a></p>
         {{/if}}
     </div>
 </div>
