selected tandem highlighted in chat list

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -387,7 +387,7 @@ nav .nav-img img {
   max-height: 100%;
 }
 .tandem-list .current {
-  background-color: red;
+  background-color: white;
 }
 
 #messages {
