--- a/views/tandems/index.hbs
+++ b/views/tandems/index.hbs
@@ -4,7 +4,7 @@
 <div class="flex-row">
     <div class="flex-column tandem-list">
         <ul>
-            {{#each tandems}} {{#if this.current}}
+            {{#each tandems}} {{#if this.selected}}
             <li class="current">
                 {{else}}
                 <li>{{/if}}
