--- a/public/stylesheets/dashboard.scss
+++ b/public/stylesheets/dashboard.scss
@@ -10,6 +10,9 @@
 
 .dashboard-wrapper {
   width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   @media #{$screen-middle} {
     align-items: flex-end;
