--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -142,6 +142,9 @@ nav .nav-img img {
 
 .dashboard-wrapper {
   width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 @media (min-width : 480px) {
   .dashboard-wrapper {
