--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -4,9 +4,7 @@
     {{!-- <img src="{{picture}}"> --}}
 </div>
 
-
-<div class="flex-column-center dashboard-wrapper">
-
+<div class="dashboard-wrapper">
     <div class="dashboard-group">
         <h3>My Tandems</h3>
         {{#if tandems}}
