--- a/views/partials/event-tile-small.hbs
+++ b/views/partials/event-tile-small.hbs
@@ -4,6 +4,6 @@
   </div>
   <div class="tile-content">
     <a href="/events/{{this._id}}">{{this.title}}</a>
-    <p>{{this.date}}</p>
+    <p>{{this.dateStr}}</p>
   </div>
 </div>
