--- a/views/events/show.hbs
+++ b/views/events/show.hbs
@@ -1,20 +1,25 @@
 {{> navbar data}}
 <div class="flex-column-center event">
   <div class="flex-column">
-    <a href="/events">Back to my events</a>
-    <div class="flex-row">
-      <div class="tile-image">
-        <img src="{{event.picture}}" alt="event picture">
-      </div>
-      <div class="description">
-        <h2>{{ event.title}}</h2>
-        <p>{{event.description}}</p>
+    <div class="flex-column">
+      <a href="/events">Back to my events</a>
+      <div class="flex-row">
+        <div class="tile-image">
+          <img src="{{event.picture}}" alt="event picture">
+        </div>
+        <div class="description">
+          <h2>{{ event.title}}</h2>
+          <p>{{event.description}}</p>
+        </div>
       </div>
     </div>
+
     <div class="chat-wrapper">
-      <ul id="messages"></ul>
-      <form action="">
-        <input id="m" autocomplete="off" /><button>Send</button>
+      <div class="event" id="messages"></div>
+      <form action="" class="event" id="user-input">
+        <button>Send</button>
+        <input id="m" autocomplete="off" />
+        <div id="typing" style="color:white"></div>
       </form>
       <input type="hidden" id="sender" value="{{user._id}}">
       <input type="hidden" id="name" value="{{user.name}}">
@@ -23,8 +28,8 @@
   </div>
   <div class="flex-column">
     <div class="map-wrapper">
+    </div>
 
-      {{!-- </div>
     <div class="info-wrapper">
       <p>Location:</p>
       <p>{{#if event.location.city}}{{event.location.city}}, {{/if}}{{event.location.country}}{{#if event.location.street}},</br>{{event.location.street}}</p>{{/if}}
@@ -32,13 +37,13 @@
       <p>{{event.language}}</p>
       <p>Date:</p>
       <p>{{event.date}}</p>
-      <p>Attendees: {{event.counter}}</p> { {#if event.userAttending}}
-      <a href="/events/unattend/{{event._id}}">Unattend Event</a><br>{{#if}}
+      <p>Attendees: {{event.counter}}</p> {{#if event.userAttending}}
+      <a href="/events/unattend/{{event._id}}">Unattend Event</a><br> {{else}}
       <a href="/events/attend/{{event._id}}">Attend Event</a><br> {{/if}} {{#if event.own}}<a href="/events/edit/{{event._id}}">Edit
         Event
-      </a>
-      <br> {{/if}}
-    </div> --}}
+      </a>{{/if}}
+      <br>
+    </div>
   </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
