--- a/views/partials/event-tile.hbs
+++ b/views/partials/event-tile.hbs
@@ -4,5 +4,5 @@
 <div class="tile-content">
   <h3>{{this.title}}</h3>
   <p>{{this.description}}</p>
-  <p>{{this.date}}</p>
+  <p>{{this.dateStr}}</p>
 </div>
