fix navbar avatar on several pages

--- a/views/events/edit.hbs
+++ b/views/events/edit.hbs
@@ -1,4 +1,4 @@
-{{> navbar data}}
+{{> navbar user}}
 <script> const data = {{{ dataString }}}</script>
 <script src='/javascripts/data.js'></script>
 <script src='/javascripts/event.js'></script>
