--- a/views/events/show.hbs
+++ b/views/events/show.hbs
@@ -1,4 +1,4 @@
-{{> navbar data}}
+{{> navbar user}}
 <div class="flex-column-center event">
   <div class="flex-column">
     <div class="flex-column">
