landing page payout

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -16,6 +16,7 @@ $tile-picture-s: 80px;
 $tile-picture-xs: 50px;
 $filter-width: 320px;
 
+@import "./landing-page";
 @import "./navigation";
 @import "./profile";
 @import "./dashboard";
