--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,11 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-
-<a href="/signup">Create account</a>
-</br>
-<a href="/login">Log in</a>
+<script src='/javascripts/landing-page.js'></script>
+<div class="center">
+  <div class="content-wrapper">
+    <h1>{{title}}</h1>
+    <h2>Talk with others in your and their language</h2>
+    <div class="menu-container">
+      <button class="success-btn" id="login">Log in</button>
+      <button class="success-btn" id="signup">Create account</button>
+    </div>
+  </div>
+</div>
