--- a/views/profile/show.hbs
+++ b/views/profile/show.hbs
@@ -73,5 +73,7 @@
   </br>
   {{#if user.ownProfile}}
   <a href="/profile/edit" class="success-btn">Edit</a><br>
-  <a href="/profile/delete/" class="danger-btn">Delete Account</a><br> {{/if}}
+  <a href="/profile/delete/" class="danger-btn">Delete Account</a><br> {{else}}
+  <a href="/tandems/add/{{this.user._id}}" class="success-btn">Start conversation</a>{{/if}}
+
 </div>
