--- a/views/partials/tandem-tile-small.hbs
+++ b/views/partials/tandem-tile-small.hbs
@@ -1,8 +1,8 @@
 <div class="tile-dashboard">
-  <div class="tile-image"> <img src={{this.picture}} alt="profile picture">
+  <div class="tile-image"> <img src={{this.user.picture}} alt="profile picture">
   </div>
   <div class="tile-content">
-    <a href="/tandems/{{this._id}}">{{this.name}}</a>
-    <p class="message-time">Last message time and date here</p>
+    <a href="/tandems/{{this.user._id}}">{{this.user.name}}</a>
+    <p class="message-time">{{this.dateStr}}</p>
   </div>
 </div>
